--- a/index.html
+++ b/index.html
@@ -4,47 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Your Website</title>
-  <style>
-    body {
-      font-family: 'Times New Roman', Times, serif;
-      margin: 0;
-      padding: 0;
-    }
-    header {
-      background-color: red;
-      color: white;
-      padding: 20px 0;
-      text-align: center;
-    }
-    nav {
-      background-color: black;
-      color: wheat;
-      text-align: center;
-      padding: 10px 0;
-    }
-    nav a {
-      color: white;
-      text-decoration: none;
-      margin: 0 20px;
-    }
-    nav a:hover {
-      color: red;
-    }
-    .container {
-      width: 80%;
-      margin: 0 auto;
-      padding: 20px 0;
-    }
-    .owner-bio {
-      text-align: center;
-      padding: 20px 0;
-    }
-    .owner-bio img {
-      width: 80px;
-      border-radius: 50%;
-    }
-    /* Add more CSS for styling as needed */
-  </style>
+  <link rel="stylesheet" href="./index.css" />
+
+
 </head>
 <body>
   <header>
